# home-data-collector

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.Docker.md  README.md  backend_config_template.toml  backend_config_template.yml  collector-config_template.toml  collector_config_template.yml  compose.yml  docker-bake.json  package-lock.json
.dev/: Dockerfile  compose.yml  hdc-start
.github/workflows/: build-push-docker-image.yml
architecture/ingestion/: ingestion.json
architecture/shelly_responses/: shelly_v1_status.json
backend/: Cargo.toml  Dockerfile
backend/src/: config.rs  error.rs  main.rs  sdb.rs
backend/src/app/: error.rs  mod.rs  problem_details.rs
backend/src/app/general/: error.rs  model.rs
backend/src/app/interface/: controller.rs  error.rs  mod.rs  model.rs  route.rs  test.rs
backend/src/app/signal_data/: controller.rs  error.rs  model.rs  route.rs
backend/src/app/signal_meta/: controller.rs  error.rs  mod.rs  model.rs  route.rs  test.rs
backend/src/app/user/: controller.rs  model.rs  route.rs  test.rs
backend/src/app/weather_connector/: controller.rs  error.rs  mod.rs  route.rs
frontend/: package-lock.json  package.json  svelte.config.js  tailwind.config.ts
frontend/prisma/: schema.prisma
frontend/src/: app.css  app.d.ts  hooks.server.ts
frontend/src/lib/: charts-action.ts  utils.ts
frontend/src/lib/server/: auth.ts  prisma.ts
frontend/src/lib/types/: index.ts  interfaceTypes.ts
frontend/src/routes/: +layout.server.ts  +layout.svelte  +page.svelte  Header.svelte
frontend/src/routes/dashboard/: +page.server.ts  +page.svelte  +page.ts
frontend/src/routes/dashboard/chartsjs/: +page.svelte
frontend/src/routes/interface/: +page.server.ts  +page.svelte  +page.ts  data-table.svelte  interfacedetail.svelte
frontend/src/routes/login/: +page.server.ts  +page.svelte
frontend/src/routes/logout/: +server.ts
frontend/src/routes/profile/: +page.server.ts  +page.svelte
frontend/src/routes/register/: +page.svelte
frontend/src/routes/signup/: +page.server.ts  +page.svelte
patterns/query/: query_timeseries.json
patterns/shelly_responses/: shelly_v2_status.json
services/buffer_agent/: Cargo.toml  build.rs
services/buffer_agent/src/: main.rs
services/collector/: Cargo.toml  Dockerfile  build.rs
services/collector/src/: buffer.rs  collector.rs  config.rs  main.rs  scheduler.rs  task.rs  taskforce.rs
services/collector/src/models/: mod.rs  shelly_v1.rs  shelly_v2.rs  weather.rs
services/collector/src/util/: collector.rs  mod.rs  scheduler.rs
shared/: Cargo.toml
shared/src/: lib.rs
shared/src/config/: config.rs
shared/src/models/: ingestion_container.rs  interface.rs  mod.rs  shelly_v1_adapter.rs  shelly_v1_adapter_light.rs  shelly_v2_adapter.rs  shelly_v2_adapter_light.rs  signal_data.rs  signal_meta.rs  tasklist.rs  user.rs  weather_adapter.rs  weather_adapter_light.rs  weather_model.rs
shared/src/proto/: timeseries_buffer.proto
shared/src/utils/: config.rs  mod.rs  retry.rs
src/: error.rs  main.rs  prelude.rs
src/api/: ingest.rs  mod.rs  query_timeseries.rs  sensor.rs  signal.rs  test.rs
src/app/: mod.rs
src/app/general/: model.rs
src/app/signal_data/: controller.rs  error.rs  model.rs  route.rs
src/app/signal_meta/: controller.rs  error.rs  model.rs  route.rs
src/model/: ingest_packet.rs  mod.rs  query_timeseries.rs  sensor.rs  signal.rs
src/repository/: sdb.rs
src/utils/: macros.rs  mod.rs
