[package]
name = "home_data_collector"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1"
tokio = { version = "1", features = ["full"]}
actix-web = "4.4"
uuid = { version = "1.4.1", features = ["v4"]}
serde = { version = "1.0.188", features = ["derive"]}
env_logger = "0.10.0"
log = "0.4.20"
strum_macros = "0.25.2"
strum = { version = "0.25", features = ["derive"]}

[dev-dependencies]
anyhow = "1"
