[package]
name = "hdc-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1"
tokio = { version = "1", features = ["full"]}
actix-web = "4.4"
uuid = { version = "1.6.1", features = ["v4"]}
serde = { version = "1.0.188", features = ["derive"]}
env_logger = "0.10.0"
log = "0.4.20"
strum_macros = "0.25.2"
strum = { version = "0.25", features = ["derive"]}
surrealdb = "1.0.0"
derive_more = "0.99.17"
futures = "0.3.29"
serde_json = "1.0.107"
chrono = "0.4.31"
hdc_shared = { path = "../shared"}
toml = "0.8.8"
actix-cors = "0.7.0"

[dev-dependencies]
anyhow = "1"

