[package]
name = "buffer_agent"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hdc_shared = { path = "../../shared"}
tokio = { version = "1.35.1", features = ["rt-multi-thread", "macros"]}
prost = "0.12.3"
tonic = "0.10.2"
surrealdb = { version = "1.0.2", features = ["kv-rocksdb"]}
serde = { version = "1.0.188", features = ["derive"]}
serde_json = "1.0.107"


[build-dependencies]
tonic-build = "0.10.2"
