[package]
name = "collector"
version = "0.1.0"
edition = "2021"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
serde = "1.0.193"
serde_derive = "1.0.193"
serde_json = "1.0.107"
clokwerk = "0.4.0"
chrono = "0.4.21"
reqwest = {version = "0.11.22", features = ["json", "blocking"]}
hdc_shared = { path = "../../shared"}
once_cell = "1.19.0"
env_logger = "0.10.1"
log = "0.4.20"
tonic = "0.10.2"
prost = "0.12.3"
tokio = {version = "1.35.1", features = ["rt-multi-thread"]}

[build-dependencies]
tonic-build = "0.10.2"
