[package]
name = "collector"
version = "0.1.0"
edition = "2021"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
hdc_shared = { path = "../../shared"}
serde = "1.0.193"
serde_derive = "1.0.193"
serde_json = "1.0.107"
reqwest = {version = "0.11.22", features = ["json"]}
log = "0.4.20"
env_logger = "0.10.1"
tokio = {version = "1.35.1", features = ["rt-multi-thread", "macros", "time"]}
uuid = "1.6.1"
toml = "0.8.8"
zstd = "0.13.1"
